fix: fixed overflow id error, fixed item error code, removed placeholder and others

--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,9 @@
   --color-custom-accent: #7c5dfa;
 
   --color-custom-secondary: #888eb0;
-  --color-custom-tetiary: #f9fafe;
+  --color-custom-tetiary: #ffffff;
 
-  --color-custom-border: #494e6e;
+  --color-custom-border: #dfe3fa;
 
   --color-custom-success: #33d69f;
   --color-custom-warning: #ff8f00;
@@ -28,9 +28,9 @@
   --color-custom-bg-card: #1e2139;
   --color-custom-accent: #7c5dfa;
   --color-custom-secondary: #888eb0;
-  --color-custom-tetiary: #252945;
+  --color-custom-tetiary: #1e2139;
 
-  --color-custom-border: #494e6e;
+  --color-custom-border: #252945;
 
   --color-custom-success: #33d69f;
   --color-custom-warning: #ff8f00;
